# obs-simulators

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
simulators/building/: .dockerignore  Dockerfile  README.md  __init__.py  pyproject.toml  simulator.py
